Removed navigation controller, remove unnessary code from the ViewModel class

--- a/views/Thread/show.ejs
+++ b/views/Thread/show.ejs
@@ -14,6 +14,8 @@
     </ul>
   </div>
   <div class="card-block" role="container">
-    <div class="loader"></div>
+    <% if (typeof threads !== "undefined" && threads.length > 0) { %>
+    <%- partial('../components/thread-summary.ejs') %>
+    <% } %>
   </div>
 </div>
