Mass code clean up, especially header module

--- a/sources/scss/app.scss
+++ b/sources/scss/app.scss
@@ -1,4 +1,4 @@
-/**
+﻿/**
  * importer.scss
  *
  * By default, new Sails projects are configured to compile this file
@@ -20,8 +20,7 @@
 @import
   "utils/variables",
   "utils/functions",
-  "utils/mixins",
-  "utils/placeholders";
+  "utils/mixins";
 /*=====  End of Our Custom Helpers     ======*/
 
 /*=============================================
