--- a/sources/scss/components/_textboxes.scss
+++ b/sources/scss/components/_textboxes.scss
@@ -1,4 +1,4 @@
-input {
+﻿/*input {
   font-size: 0.8rem !important;
   @include set-font();
   &::-webkit-input-placeholder {
@@ -40,4 +40,4 @@ input {
       height: 20px;
     }
   }
-}
+}*/
