--- a/sources/scss/components/_icons.scss
+++ b/sources/scss/components/_icons.scss
@@ -1,9 +1,9 @@
-.icon {
+﻿.icon {
   display: inline-block;
   vertical-align: middle;
 
   &.small {
-    width: 18px;
-    height: 18px;
+    width: 20px;
+    height: 20px;
   }
 }
