Major code change

--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -60,7 +60,7 @@
               <div class="input-group-addon">
                 <img src="/svg/username.svg" class="icon small" />
               </div>
-              <input type="text" name="username-or-email" class="form-control" placeholder="Username / Email address" />
+              <input type="text" name="usernameOrEmail" class="form-control" placeholder="Username / Email address" />
             </div>
             <!--Password-->
             <div class="input-group mb-3">
